404.html 마침표 추가

--- a/404.html
+++ b/404.html
@@ -6,5 +6,5 @@ permalink: 404.html
 
 <div class="page">
   <h1 class="page-title">{{ site.title }}</h1>
-  <p class="lead">죄송합니다. 해당 URL을 잘못 입력했거나 존재하지 않는 것을 가리킵니다<a href="{{ site.baseurl }}/">뒤로가기</a></p>
+  <p class="lead">죄송합니다. 해당 URL을 잘못 입력했거나 존재하지 않는 것을 가리킵니다. <a href="{{ site.baseurl }}/">뒤로가기</a></p>
 </div>
